--- a/Web应用开发第二次作业/Exercise2/WebRoot/WEB-INF/web.xml
+++ b/Web应用开发第二次作业/Exercise2/WebRoot/WEB-INF/web.xml
@@ -6,6 +6,18 @@
   <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>VCodeServlet</servlet-name>
+    <servlet-class>controller.VCodeServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>www</servlet-name>
+    <servlet-class>controller.www</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>CreateVerifyCodeImage</servlet-name>
     <servlet-class>controller.CreateVerifyCodeImage</servlet-class>
   </servlet>
@@ -85,7 +97,7 @@
     <filter-class>filter.PermissionFilter</filter-class>
     <init-param>
       <param-name>notCheckPath</param-name>
-      <param-value>/createVerifyImage.do,/login.do,/error.jsp,/PersonalCenter.jsp</param-value>
+      <param-value>/createVerifyImage.do,/login.do,/error.jsp</param-value>
     </init-param>
   </filter>
   <filter-mapping>
